--- a/Lab 7.ipynb
+++ b/Lab 7.ipynb
@@ -20,9 +20,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "word: and\n",
+      "count: 51\n",
+      "word: to\n",
+      "count: 24\n",
+      "word: of\n",
+      "count: 21\n",
+      "word: intelligence\n",
+      "count: 13\n",
+      "word: the\n",
+      "count: 13\n",
+      "word: a\n",
+      "count: 12\n",
+      "word: or\n",
+      "count: 8\n",
+      "word: for\n",
+      "count: 8\n",
+      "word: in\n",
+      "count: 7\n",
+      "word: is\n",
+      "count: 7\n",
+      "word: criminal\n",
+      "count: 6\n",
+      "word: information\n",
+      "count: 6\n",
+      "word: from\n",
+      "count: 5\n",
+      "word: law\n",
+      "count: 5\n",
+      "word: an\n",
+      "count: 5\n",
+      "word: The\n",
+      "count: 4\n",
+      "word: be\n",
+      "count: 4\n",
+      "word: other\n",
+      "count: 4\n",
+      "word: as\n",
+      "count: 4\n",
+      "word: Monitor\n",
+      "count: 4\n"
+     ]
+    }
+   ],
    "source": [
     "from collections import Counter\n",
     "with open('Job.txt','r') as job:\n",
