--- a/Lab 7.ipynb
+++ b/Lab 7.ipynb
@@ -171,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = '\sheet 1.png\'>"
+    "<img src = \'sheet 1.png\'>"
    ]
   },
   {
